--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,12 @@
       <artifactId>gson</artifactId>
       <version>2.8.8</version>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
