--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.database.class=com.mysql.cj.jdbc.Driver
-spring.database.host=jdbc:mysql://db-instance.czlvjpec3sns.ap-northeast-2.rds.amazonaws.com:3306/jpetstore?serverTimezone=UTC&allowMultiQueries=true
-spring.database.username=admin
-spring.database.password=simjonghan1998
+spring.database.host=URL
+spring.database.username=username
+spring.database.password=password
